--- a/fullstack/frontend/languages/css/css2/flaot/float.html
+++ b/fullstack/frontend/languages/css/css2/flaot/float.html
@@ -14,26 +14,17 @@
     </head>
     <body>
 <style>
-    #comm{
-        font-size: 50px;
+    #root{
+        background-color: red;
+        height: 200px;
+        width: 200px;
+        /* float: right; */
+        bottom: 0px;
+        position: absolute;
     }
-#a{
-    background-color: red;
-    
-}
-#b{
-    background-color: rgb(9, 255, 0);
-   font-size: 60px;
-} 
-#c{
-    background-color: cyan;
-    
-}
 </style>
 
-      <h1 id="a comm">hello</h1>
-      <h1 id="b">world</h1>
-      <h1 id="c comm">universe</h1>        
+    <div id="root"></div>        
         <script src="" async defer></script>
     </body>
 </html>
