--- a/fullstack/frontend/languages/css/css2/position/absolute.html
+++ b/fullstack/frontend/languages/css/css2/position/absolute.html
@@ -13,27 +13,19 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
-<style>
-    #comm{
-        font-size: 50px;
-    }
-#a{
-    background-color: red;
-    
-}
-#b{
-    background-color: rgb(9, 255, 0);
-   font-size: 60px;
-} 
-#c{
-    background-color: cyan;
-    
-}
-</style>
+        <style>
+            #root{
+                background-color: red;
+                width: 400px;
+                height: 400px;
+                position: absolute;
+                z-index: -1;
+            }
+        </style>
+       <div id="root">
 
-      <h1 id="a comm">hello</h1>
-      <h1 id="b">world</h1>
-      <h1 id="c comm">universe</h1>        
+       </div>
+        <h1>hello</h1>
         <script src="" async defer></script>
     </body>
 </html>
