--- a/fullstack/frontend/languages/css/css2/selectors/combinator selector/child.html
+++ b/fullstack/frontend/languages/css/css2/selectors/combinator selector/child.html
@@ -14,16 +14,19 @@
     </head>
     <body>
         <style>
-          div>h1{
+          div>div>h1{
                 background-color: red;
             }
         </style>
     <div>
         <p>jhds</p>
         <h2>jjh</h2>
-        <h1>world</h1>
-        <h1>world</h1>
-        <h1>world</h1>
+        <div>
+            <h1>world</h1>
+            <h1>world</h1>
+            <h1>world</h1>
+        </div>
+        
     </div>
 
     <h1>world</h1>
