--- a/fullstack/frontend/languages/css/css3/shadows/text-shadow.html
+++ b/fullstack/frontend/languages/css/css3/shadows/text-shadow.html
@@ -12,28 +12,19 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
     </head>
-    <body>
-<style>
-    #comm{
-        font-size: 50px;
-    }
-#a{
-    background-color: red;
-    
-}
-#b{
-    background-color: rgb(9, 255, 0);
-   font-size: 60px;
-} 
-#c{
-    background-color: cyan;
-    
-}
-</style>
+    <body >
+        <style>
 
-      <h1 id="a comm">hello</h1>
-      <h1 id="b">world</h1>
-      <h1 id="c comm">universe</h1>        
+            h1{
+                color: white;
+                text-shadow: 1px 1px 2px black,0 0 25px blue,0 0 5px darkblue;
+            }
+            h2{
+                text-shadow: 2px 2px black;
+            }
+        </style>
+        <h1>hello im a text with shadow</h1>
+        <h2>jhsdhjsd</h2>
         <script src="" async defer></script>
     </body>
 </html>
