--- a/fullstack/frontend/languages/js/typescript/varibales/j.html
+++ b/fullstack/frontend/languages/js/typescript/varibales/j.html
@@ -13,24 +13,10 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+        <!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
         
-<div id="root"></div>
-<button onclick="dip()">click on me to cee  ny image</button>
-
-        <script >
-function dip(){
-    fetch('https://api.github.com/users').then((data2)=>{
-    data2.json().then((data3)=>{
-        console.log(data3[1].avatar_url)
-      
-    }).catch((er)=>{
-        console.log(er)
-    })
-})
-
-}
-
-
-        </script>
+        <script src="var.ts" async defer></script>
     </body>
 </html>
